--- a/package.json
+++ b/package.json
@@ -7,25 +7,27 @@
     "start": "vinxi start"
   },
   "dependencies": {
-    "@solid-primitives/i18n": "^2.1.1",
-    "@solid-primitives/storage": "^4.0.0",
+    "@solid-primitives/i18n": "^2.2.1",
+    "@solid-primitives/storage": "^4.3.2",
     "@solidjs/meta": "^0.29.4",
-    "@solidjs/router": "^0.14.1",
-    "@solidjs/start": "^1.0.6",
-    "autoprefixer": "^10.4.19",
+    "@solidjs/router": "^0.15.3",
+    "@solidjs/start": "^1.1.3",
+    "@tailwindcss/postcss": "^4.1.5",
+    "@tailwindcss/vite": "^4.1.5",
+    "autoprefixer": "^10.4.21",
     "js-cookie": "^3.0.5",
-    "postcss": "^8.4.38",
+    "postcss": "^8.5.3",
     "solid-dismiss": "^1.8.2",
     "solid-i18n": "^1.1.0",
-    "solid-js": "^1.8.18",
-    "tailwindcss": "^3.4.3",
-    "vinxi": "^0.4.1"
+    "solid-js": "^1.9.6",
+    "tailwindcss": "^4.1.5",
+    "vinxi": "^0.5.6"
   },
   "engines": {
     "node": ">=18"
   },
   "devDependencies": {
-    "@iconify-icon/solid": "^2.1.1",
+    "@iconify-icon/solid": "^3.0.0",
     "@types/js-cookie": "^3.0.6"
   }
 }
