--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kun-galgame-nav-solid",
+  "name": "The Star of the Other Shore",
   "type": "module",
   "scripts": {
     "dev": "vinxi dev",
